# ortoolsScheduler

./: Assignment.cpp  Assignment.h  Assignments.cpp  Assignments.h  CMakeLists.txt  Job.cpp  Job.h  OrtoolsScheduler.cpp  OrtoolsScheduler.h  SchedulingParameters.cpp  SchedulingParameters.h  SchedulingSettingsProvider.cpp  SchedulingSettingsProvider.h  TestData.cpp  TestData.h  main.cpp  utils.h  worker.cpp  worker.h
old_data_classes/: Job.cpp  Job.h  SchedulingParameters.cpp  SchedulingParameters.h  SchedulingSettingsProvider.cpp  SchedulingSettingsProvider.h  worker.cpp  worker.h
proto/: scheduler.grpc.pb.cc  scheduler.grpc.pb.h  scheduler.pb.cc  scheduler.pb.h  scheduler.proto
server/: scheduler_server.cpp
